Fixed an error of not showing animation

--- a/css/animation.css
+++ b/css/animation.css
@@ -83,7 +83,5 @@
         height: 1px;
     }
 
-    .enterprise .basic-border:nth-child(2){
-        width: 0.8px;
-    }
+    
 }
